mIsolate Image change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digitalfortress",
+  "name": "digital_fortress",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.15",
-    "clsx": "^2.0.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "framer-motion": "^10.16.4",
-    "next": "13.4.19",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-type-animation": "^3.2.0",
-    "tailwindcss": "3.3.3"
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.3.3"
   }
 }
